# Bit-Tracer

./: CMakeLists.txt  README.md  build.bat
old - Ray Tracing In One Weekend/: build.bat
old - Ray Tracing In One Weekend/src/: Camera.h  Common.h  Perlin.cpp  RayTracer.cpp  RayTracer.h  Scenes.h  main.cpp
old - Ray Tracing In One Weekend/src/core/: BitImage.h  Interval.h  Utility.h
old - Ray Tracing In One Weekend/src/hittable/: BVH.h  ConstantMedium.h  HittableList.h  Quad.h  Sphere.h  Triangle.cpp  Triangle.h
old - Ray Tracing In One Weekend/src/materials/: Dielectric.cpp  Isotropic.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h
old - Ray Tracing In One Weekend/src/pdf/: MixturePDF.h  PDF.h  SpherePDF.h
old - Ray Tracing In One Weekend/src/texture/: ImageTexture.h  NoiseTexture.h  Texture.h
scenes/: scenes code.txt
src/: AABB.cpp  BVH.h  BitImage.cpp  Camera.h  Color.h  Common.h  Hittable.h  HittableList.h  Perlin.h  Ray.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  ThreadPool.cpp  ThreadPool.h  Utility.h  Vec3.h  main.cpp  scenes.h
src/core/: Color.h  Interval.cpp  Interval.h  ONB.h  Vec3.h
src/hittable/: AABB.cpp  AABB.h  BVH.h  ConstantMedium.cpp  Hittable.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
src/materials/: Dielectric.cpp  Dielectric.h  DiffuseLight.h  Isotropic.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h
src/pdf/: CosinePDF.h  HittablePDF.h
src/texture/: CheckerTexture.h  ImageTexture.h  NoiseTexture.h  SolidColor.h
